--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 18 16:10:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.c: Declare support for migration in capabilities
+
 Fri May 15 15:59:08 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/vbox/vbox_driver.c src/vbox/vbox_tmpl.c: last patch for
