--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 19 09:00:43 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* python/libvir.py: Don't overwrite legitimate python import error.
+
 Tue May 19 12:04:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Fix misc locking bugs identified by lock checker
