--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue May 19 09:14:12 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	Use virAsprintf, rather than VIR_ALLOC + strcpy + strcat
+	* qemud/remote.c src/remote_internal.c src/storage_backend.c
+	  src/storage_backend_fs.c src/storage_backend_logical.c
+	  src/test.c
+
 Tue May 19 09:04:05 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/virsh.c: Don't validate disk type in virsh attach-disk
