--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 19 09:20:54 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* qemud/Makefile.am: Generate some config files at build time.
+
 Tue May 19 09:16:37 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	Add documentation for <sound> device XML format.
