--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 19 09:24:54 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/node_device_hal.c: Fix a possible deadlock in HAL nodedev
+	driver.
+
 Tue May 19 09:22:43 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* Makefile.am: Fix rpm build: add 'mylibtool' to EXTRADIST.
