--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 19 09:26:53 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/node_device_hal.c: Fix node device media insert/eject
+	detection.
+
 Tue May 19 09:24:54 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/node_device_hal.c: Fix a possible deadlock in HAL nodedev
