--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 19 09:39:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_fs.c: VolumeCreateXMLFrom FS storage
+	backend implementation.
+
 Tue May 19 09:36:48 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/storage_backend.h src/storage_driver.c: Storage driver
