--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 20 09:10:28 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/lxc_driver.c: fix a couple of error code, patch by
+	  Amy Griffis
+
 Tue May 19 09:39:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/storage_backend_fs.c: VolumeCreateXMLFrom FS storage
