--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed May 20 15:33:27 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/pci.c: small portability patch
+
 Wed May 20 09:10:28 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/lxc_driver.c: fix a couple of error code, patch by
