Add the Interface config APIs * configure.in include/libvirt/libvirt.h[.in]   include/libvirt/virterror.h qemud/remote.c   qemud/remote_dispatch_args.h qemud/remote_dispatch_prototypes.h   qemud/remote_dispatch_ret.h qemud/remote_dispatch_table.h   qemud/remote_protocol.[chx] src/Makefile.am src/datatypes.c   src/datatypes.h src/driver.h src/libvirt.c src/remote_internal.c   src/virterror.c src/libvirt_private.syms src/libvirt_public.syms:   Add the Interface config APIs and remote stubs for those, patch   by Laine Stump * AUTHORS: add Laine daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Patches have also been contributed by:
   Takahashi Tomohiro   <takatom@jp.fujitsu.com>
   Serge E. Hallyn      <serue@us.ibm.com>
   Soren Hansen         <soren@canonical.com>
+  Laine Stump          <laine@redhat.com>
 
   [....send patches to get your name here....]
 
