--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 21 15:20:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/drvqemu.html[.in], docs/drvxen.html[.in]: Add docs on
+	use of new domain XML conversions
+
 Thu May 21 15:16:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c, src/qemu_conf.c, src/qemu_conf.h: Add new
