Include the OpenNebula driver * src/opennebula/one_conf.[ch] src/opennebula/one_driver.[ch]:   the OpenNebula driver * configure.in include/libvirt/virterror.h qemud/Makefile.am   qemud/qemud.c src/Makefile.am src/domain_conf.[ch] src/driver.h   src/libvirt.c src/virterror.c: integration of the OpenNebula   driver in the libvirt infrastructure * AUTHORS: add Abel Miguez Rodriguez daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -70,6 +70,7 @@ Patches have also been contributed by:
   Serge E. Hallyn      <serue@us.ibm.com>
   Soren Hansen         <soren@canonical.com>
   Laine Stump          <laine@redhat.com>
+  Abel Míguez Rodríguez<amiguezr@pdi.ucm.es>
 
   [....send patches to get your name here....]
 
