--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri May 29 14:26:30 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	Fix regression with network interface parsing
+	* src/domain_conf.c: Add missing 'break' statement in network
+	parser
+
 Fri May 29 14:26:10 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* docs/schemas/storagevol.rng docs/formatstorage.html[.in]
