--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May 29 10:00:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/virsh.c : virsh: Use consistent spacing for net-list
+
 Fri May 29 15:29:32 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_conf.c docs/schemas/domain.rng
