qemu_driver: Fix another domain startup error reporting race.
Parse the command line output a bit earlier so we have a better chance
of reporting the full error output on failure.

I hit this when QEMU would try to boot an invalid kernel (virtinst bug).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 29 10:10:00 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c: qemu_driver: Fix another domain startup error
+	reporting race.
+
 Fri May 29 10:01:19 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c : qemuDomainLookupByUUID: print correct UUID
