network driver: Fix regression defining colliding networks at daemon startup.
If two virtual networks have the same hardcoded bridge device (which
prevents them from being active simultaneously) we still want to define
them at daemon startup, so the user has a fighting chance of correcting
the XML error.

Add an extra flag to SetBridge to avoid reporting an error if there is
a bridge collision, and use this when loading network configs at startup.

This regressed via commit 4c3f3b4d.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 29 10:16:13 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/network_driver.c src/network_conf.c src/network_conf.h:
+	Fix regression defining colliding networks at daemon startup.
+
 Fri May 29 10:13:55 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/network_driver.c: networkDestroy: Report error if network
