--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 29 16:25:32 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/lxc_container.c: fix a portability issue if PR_CAPBSET_DROP
+	  not defined.
+
 Fri May 29 10:16:13 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/network_driver.c src/network_conf.c src/network_conf.h:
