find and use kvm-img, qemu-img or qcow-create dynamically * configure.in src/libvirt_private.syms src/storage_backend_fs.c   src/util.c src/util.h: find and use kvm-img, qemu-img or qcow-create   dynamically at runtime, patch by Doug Goldstein * AUTHORS: add Doug Goldstein Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -71,6 +71,7 @@ Patches have also been contributed by:
   Soren Hansen         <soren@canonical.com>
   Laine Stump          <laine@redhat.com>
   Abel Míguez Rodríguez<amiguezr@pdi.ucm.es>
+  Doug Goldstein       <cardoe@gentoo.org>
 
   [....send patches to get your name here....]
 
