--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 11 15:15:02 GMT 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/qemu_conf.c: re-factor qemu version parsing.
+	
 Thu Jun 11 15:14:37 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in src/libvirt_private.syms src/storage_backend_fs.c
