--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 11 15:17:12 GMT 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/qemu_conf.c: detect newer qemu-kvm versions
+
 Thu Jun 11 15:15:02 GMT 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* src/qemu_conf.c: re-factor qemu version parsing.
