--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Jun 11 16:22:22 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/node_device_hal.c src/node_device_conf.[ch]: add support
+	  for serial number in HAL storage backend, patch by Dave Allan
+	* docs/schemas/nodedev.rng
+tests/nodedevschemadata/storage_serial_3600c0ff000d7a2a5d463ff4902000000.xml:
+          update the schemas and add a test case, also by Dave Allan
+
 Thu Jun 11 15:18:44 GMT 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* src/qemu_conf.[ch]: make qemuParseHelpStr() available
@@ -13,7 +21,7 @@ Thu Jun 11 15:17:12 GMT 2009 Mark McLoughlin <markmc@redhat.com>
 Thu Jun 11 15:15:02 GMT 2009 Mark McLoughlin <markmc@redhat.com>
 
 	* src/qemu_conf.c: re-factor qemu version parsing.
-	
+
 Thu Jun 11 15:14:37 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* configure.in src/libvirt_private.syms src/storage_backend_fs.c
