--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,17 @@
-Thu Jun 12 13:06:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+Fri Jun 12 14:16:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	Remove use of getuid()==0 for privilege checks
+	* qemud/qemud.c, qemud/qemud.h, src/driver.h, src/libvirt.c,
+	src/libvirt_internal.h, src/lxc_driver.c, src/network_driver.c,
+	src/node_device_devkit.c, src/node_device_hal.c,
+	src/qemu_conf.h, src/qemu_driver.c, src/remote_internal.c,
+	src/storage_driver.c, src/uml_conf.h, src/uml_driver.c,
+	src/xen_internal.c, src/xen_unified.c: Remove all use of
+	getuid()/geteuid() to determine if privileged. Replace with
+	'privileged' flag provided by libvirtd, or direct access
+	checks.
+
+Fri Jun 12 13:36:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Include OS driver name (if any) in device XML
 	* src/node_device.c: Refresh OS driver when generating XML,
@@ -8,7 +21,7 @@ Thu Jun 12 13:06:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 	* src/node_device_hal.c: Record sysfs path to be used for
 	driver name fetching later.
 
-Thu Jun 12 13:06:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+Fri Jun 12 13:06:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Improve error reporting for virConnectOpen URIs
 	* src/lxc_driver.c, src/openvz_driver.c, src/qemu_driver.c,
@@ -22,7 +35,7 @@ Thu Jun 12 13:06:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 	* src/virterror.c: Improve error message text for
 	VIR_ERR_NO_CONNECT code
 
-Thu Jun 12 12:26:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+Fri Jun 12 12:26:42 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Fix re-detection of transient VMs after libvirtd restart
 	* src/domain_conf.c, src/domain_conf.h, src/libvirt_private.syms:
