--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jun 15 15:58:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	Fix build from tar.gz
+	* src/Makefile.am: Add missing node_device_hal.h to list of
+	distributed files
+
 Mon Jun 15 12:05:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/util.c: Fix bogus initialization in virFindFileInPath
