--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 16 10:00:50 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_conf.c: Fix qemu command flags fetching
+
 Tue Jun 16 10:30:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xen_internal.c: Add new variant of availheap sysctl
