--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 16 11:16:17 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_conf.c src/qemu_conf.h tests/qemuhelptest.c
+	tests/qemuxml2argvtest.c:   Check that '-drive format=' is supported
+
 Tue Jun 16 10:04:32 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* tests/.cvsignore tests/.hgignore tests/.gitignore:
