--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 16 11:18:00 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/capabilities.c src/capabilities.h src/libvirt_private.syms
+	src/lxc_conf.c src/qemu_conf.c: Add virCapabilities*EmulatorRequired.
+
 Tue Jun 16 11:16:17 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_conf.c src/qemu_conf.h tests/qemuhelptest.c
