--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jun 16 11:33:54 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/domain_conf.c src/domain_conf.h src/libvirt_private.syms
+	src/lxc_driver.c src/qemu_conf.c src/qemu_driver.c:
+	Set default emulator in domain_conf.*, rather than the driver.
+
 Tue Jun 16 11:18:00 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/capabilities.c src/capabilities.h src/libvirt_private.syms
