--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jun 16 11:43:17 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_fs.c: Fix FS volume creation with backing stores.
+
 Tue Jun 16 11:33:54 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/domain_conf.c src/domain_conf.h src/libvirt_private.syms
