Allow USB hostdev product to be 0x0000
Product = 0 is a valid value based on this bug report:

https://www.redhat.com/archives/libvir-list/2009-May/msg00368.html

Also, throw a less ambiguous error if vendor = 0.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Jun 16 14:30:05 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/domain_conf.c
+	tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-product.args
+	tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-product.xml:
+	Allow USB hostdev product to be 0x0000
+
 Tue Jun 16 11:43:17 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/storage_backend_fs.c: Fix FS volume creation with backing stores.
