--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jun 18 14:56:24 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Fix socket path for remote SSH
+	tunnels to honour read-only flag
+
 Wed Jun 17 10:31:35 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/node_device.[ch] src/storage_backend.[ch]: fixes a
