--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jun 22 11:09:18 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/test.c: Fix domain ID after redefining a running VM
+
 Mon Jun 22 12:27:39 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/conf.[ch]: restrict VMX syntax parsing types, patch by Matthias
